@@ -1,3 +1,4 @@
+* Add CheckVIES wizard (VAT Information Exchange System)
 * Add default categories on party with context
 * Allow egg installation
 
